@startuml
skinparam classAttributeIconsize 0
class Article{
-id:int
-titre:string
-contenu:text
-createdAt:datetime
-slug:string
-publie:bool
}
class Categorie{
-id:int
-titre:string
-slug:string
}
class Commentaire{
-id:int
-contenu:text
-createdAt:datetime
}
class Utilisateur{
-id:int
-prenom:string
-nom:string
-pseudo:string
}

Commentaire"0..* "--"0..1 "Utilisateur
Article"1..1 "--"0..* "Commentaire
Article"0..* "--"0..1 "Categorie

@enduml